[project]
name = "cs-resource-hub"
version = "1.0.0"
description = "A curated dataset of Canadian Computer Science student resources."
authors = [{ name = "Nicholas Xydis", email = "NicholasXydis@outlook.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "jsonschema>=4.21.0",
    "matplotlib==3.11.0",
    "pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]
eda = [
    "jupyterlab>=4.2.0",
    "pandas>=2.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["scripts"]
testpaths = ["tests"]
